Adding versioning, MQTT callback expanded with cases, Blue LED on after start to indicate time to load SD-card.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,13 @@ framework = arduino
 lib_deps = 
     vshymanskyy/TinyGSM @ ^0.11.7
     knolleary/PubSubClient @ ^2.8
+
+; Release environment
+[env:release]
+extends = env:esp32dev
+; Here you can add specific flags for the release build, if necessary
+
+; Debug environment
+[env:debug]
+extends = env:esp32dev
+build_flags = -D DEBUG
