--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32dev
 monitor_speed = 115200
+monitor_port = /dev/cu.usbserial-1400
+monitor_filters = esp32_exception_decoder
 framework = arduino
 lib_deps = 
     vshymanskyy/TinyGSM @ ^0.11.7
@@ -26,3 +28,8 @@ extends = env:esp32dev
 [env:debug]
 extends = env:esp32dev
 build_flags = -D DEBUG
+;upload_protocol = esp-prog
+;debug_tool = esp-prog
+;debug_init_break = tbreak setup
+;debug_speed = 2000
+
